исправил мобильное меню согласно БЭМ - edit License

--- a/theme/index.html
+++ b/theme/index.html
@@ -233,7 +233,7 @@
 	</section>
 	<div id="contacts" class="contacts">
 		<section class="contacts__info">
-			<h3 class="title_little contacts__title">Address:</h3>
+			<h3 class="title title_little contacts__title">Address:</h3>
 			<p>DevLab Pro, Russian Federation, Penza, Karla Marks 16</p>
 		</section>
 		<div id="map" class="contacts__map"></div>
@@ -244,22 +244,22 @@
 				<div class="yashare-auto-init" data-yashareL10n="en" data-yashareType="small" data-yashareQuickServices="facebook,twitter,gplus" data-yashareTheme="counter"></div>
 			</div>
 			<div class="footer__right-column">
-				<a href="https://www.linkedin.com/in/melnik909" class="footer__link" target="blank">Developed by Stas Melnikov</a>
+				<a href="http://stas-melnikov.ru" class="footer__link" target="blank">Developed by Stas Melnikov</a>
 			</div>
 		</div>	
 	</footer>
-	<div class="mpc_preloader">
-		<div class="mpc_preloader9"></div>
+	<div class="mpc-preloader">
+		<div class="mpc-preloader9"></div>
 	</div>
 	<div class="mobile-menu">
 		<span class="menu-close">+</span>
 		<ul class="mobile-menu-list">
-			<li class="mobile-menu-list_item"><a href="#about" class="mobile-menu__link scroll_js">About</a></li>
-			<li class="mobile-menu-list_item"><a href="#projects" class="mobile-menu__link scroll_js">Projects</a></li>
-			<li class="mobile-menu-list_item"><a href="#blog" class="mobile-menu__link scroll_js">Blog</a></li>
-			<li class="mobile-menu-list_item"><a href="#contacts" class="mobile-menu__link scroll_js">Contacts</a></li>
-			<li class="mobile-menu-list_item"><a href="https://github.com/melnik909/responsive-UX-theme" class="mobile-menu__link">GitHub</a></li>
-			<li class="mobile-menu-list_item"><a href="https://www.paypal.me/melnik909" target="blank" class="mobile-menu__link">Donate</a></li>
+			<li class="mobile-menu-list__item"><a href="#about" class="mobile-menu__link scroll_js">About</a></li>
+			<li class="mobile-menu-list__item"><a href="#projects" class="mobile-menu__link scroll_js">Projects</a></li>
+			<li class="mobile-menu-list__item"><a href="#blog" class="mobile-menu__link scroll_js">Blog</a></li>
+			<li class="mobile-menu-list__item"><a href="#contacts" class="mobile-menu__link scroll_js">Contacts</a></li>
+			<li class="mobile-menu-list__item"><a href="https://github.com/melnik909/responsive-UX-theme" class="mobile-menu__link">GitHub</a></li>
+			<li class="mobile-menu-list__item"><a href="https://www.paypal.me/melnik909" target="blank" class="mobile-menu__link">Donate</a></li>
 		</ul>
 	</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
