--- a/README.html
+++ b/README.html
@@ -7,5 +7,7 @@ which will help you to use it.</p>
 <p>If you liked this theme, please donate to me on <a href="https://www.paypal.me/melnik909" target="blank">PayPal</a> or contact me. Thanks!</p>
 <h2 id="browsers">Browsers</h2>
 <p>IE10+, Opera, Safari, Yandex browser, Chrome, Firefox, Mobile Safari, Android</p>
-<h2 id="license">License</h2>
-<p>MIT</p>
+<h2 id="commercial-license">Commercial license</h2>
+<p>If you want to use Responsive UX to develop commercial sites, themes, projects, and applications, the Commercial license is the appropriate license. With this option, your source code is kept proprietary. If you need the commercial license, please send the message on my mail - melnik909@ya.ru</p>
+<h2 id="open-source-license">Open source license</h2>
+<p>If you are creating an open source application under a license compatible with the MIT, you may use Responsive UX under the terms of the MIT.</p>
