- new CSS arhitecure - deleted jquery dependency - new mobile menu

--- a/site/index.html
+++ b/site/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>Responsive UX  template- it's  semantic, responsive and modern HTML template.</title>
 <meta charset="utf-8">
-<meta name="description"="Responsive UX  template- it's  semantic, responsive and modern HTML template.">
-<meta name="keywords"="responsive framework, UI templates, mobile template html5, responsive template, responsive theme">
+<meta name="description" content="Responsive UX  template- it's  semantic, responsive and modern HTML template.">
+<meta name="keywords" content="responsive framework, UI templates, mobile template html5, responsive template, responsive theme">
 <meta name="author" content="Stas Melnikov">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/style.css">
@@ -268,9 +268,6 @@
 		</ul>
 	</div>
 
-<script src="js/main.js"></script>
-<script async src="js/components/menu.js"></script>
-<script async src="js/components/map.js"></script>
-<script async src="js/init.js"></script>
+<script async src="js/min/app.min.js"></script>
 </body>
 </html>
