--- a/theme/index.html
+++ b/theme/index.html
@@ -29,12 +29,12 @@
 	<div class="fullwidth-banner">
 		<div class="container">
 			<img class="fullwidth-banner__img" src="images/html5.png" alt="html5 icon">
-			<span class="fullwidth-banner__inner">I've seen the FUTURE<br> It's in my BROWSER</span>
+			<span class="fullwidth-banner__label">I've seen the FUTURE<br> It's in my BROWSER</span>
 		</div>
 	</div>	
 	<section id="about" class="about section">
 		<div class="container">
-			<h2 class="title section-title">About</h2>
+			<h2 class="title title_border-yes">About</h2>
 			<div class="section__content">
 				<div class="about__column">
 					<p>
@@ -68,7 +68,7 @@
 	</section>
 	<section id="projects" class="section">
 		<div class="container">
-			<h2 class="title section-title">Projects</h2>
+			<h2 class="title title_border-yes">Projects</h2>
 			<div class="section__content">
 				<a href="#0" class="project">
 					<img src="http://stas-melnikov.ru/cliparts/notebook_640x640.jpg" class="responsive-img" alt="Work">
@@ -123,7 +123,7 @@
 	</section>
 	<section id="blog" class="section">
 		<div class="container">
-			<h2 class="title section-title">Blog</h2>
+			<h2 class="title title_border-yes">Blog</h2>
 			<div class="posts">
 				<article class="article">
 					<div class="article__imgwrap">
