--- a/site2/index.html
+++ b/site2/index.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="css/style.css">
 <link href='https://fonts.googleapis.com/css?family=Roboto:400' rel="stylesheet">
-<meta name="description" content="Responsive UX  template- it's  semantic, responsive and modern HTML template">
-<meta name="keywords" content="HTML5 template, HTML5 theme, responsive template, responsive theme">
+<meta name="description" content="Responsive UX  template- it's  semantic, responsive and modern HTML template.">
+<meta name="keywords" content="responsive framework, UI templates, mobile template html5, responsive template, responsive theme">
 <meta name="author" content="Stas Melnikov">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -71,49 +71,49 @@
 			<h2 class="title title_border-yes">Projects</h2>
 			<div class="section__content">
 				<a href="#0" class="project">
-					<img src="https://stas-melnikov.ru/cliparts/notebook_640x640.jpg" class="responsive-img" alt="Work">
+					<img src="//stas-melnikov.ru/cliparts/notebook_640x640.jpg" class="responsive-img" alt="Work">
 					<div class="project__overlay"> 
 						<span class="project__name">Title project</span>
 					</div>
 				</a>
 				<a href="#0" target="blank" class="project">
-					<img src="https://stas-melnikov.ru/cliparts/notebook5_640x640.jpg" class="responsive-img" alt="Work">
+					<img src="//stas-melnikov.ru/cliparts/notebook5_640x640.jpg" class="responsive-img" alt="Work">
 					<div class="project__overlay"> 
 						<span class="project__name">Title project</span>
 					</div>
 				</a>
 				<a href="#0" target="blank" class="project">
-					<img src="https://stas-melnikov.ru/cliparts/notebook3_640x640.jpg" class="responsive-img" alt="Work">
+					<img src="//stas-melnikov.ru/cliparts/notebook3_640x640.jpg" class="responsive-img" alt="Work">
 					<div class="project__overlay"> 
 						<span class="project__name">Title project</span>
 					</div>
 				</a>
 				<a href="#0" target="blank" class="project">
-					<img src="https://stas-melnikov.ru/cliparts/notebook2_640x640.jpg" class="responsive-img" alt="Work">
+					<img src="//stas-melnikov.ru/cliparts/notebook2_640x640.jpg" class="responsive-img" alt="Work">
 					<div class="project__overlay"> 
 						<span class="project__name">Title project</span>
 					</div>
 				</a>
 				<a href="#0" target="blank" class="project">
-					<img src="https://stas-melnikov.ru/cliparts/notebook_640x640.jpg" class="responsive-img" alt="Work">
+					<img src="//stas-melnikov.ru/cliparts/notebook_640x640.jpg" class="responsive-img" alt="Work">
 					<div class="project__overlay"> 
 						<span class="project__name">Title project</span>
 					</div>
 				</a>
 				<a href="#0" target="blank" class="project">
-					<img src="https://stas-melnikov.ru/cliparts/notebook5_640x640.jpg" class="responsive-img" alt="Work">
+					<img src="//stas-melnikov.ru/cliparts/notebook5_640x640.jpg" class="responsive-img" alt="Work">
 					<div class="project__overlay"> 
 						<span class="project__name">Title project</span>
 					</div>
 				</a>
 				<a href="#0" target="blank" class="project">
-					<img src="https://stas-melnikov.ru/cliparts/notebook2_640x640.jpg" class="responsive-img" alt="Work">
+					<img src="//stas-melnikov.ru/cliparts/notebook2_640x640.jpg" class="responsive-img" alt="Work">
 					<div class="project__overlay"> 
 						<span class="project__name">Title project</span>
 					</div>
 				</a>
 				<a href="#0" target="blank" class="project">
-					<img src="https://stas-melnikov.ru/cliparts/notebook3_640x640.jpg" class="responsive-img" alt="Work">
+					<img src="//stas-melnikov.ru/cliparts/notebook3_640x640.jpg" class="responsive-img" alt="Work">
 					<div class="project__overlay"> 
 						<span class="project__name">Title project</span>
 					</div>
@@ -127,7 +127,7 @@
 			<div class="posts">
 				<article class="article">
 					<div class="article__imgwrap">
-						<img class="responsive-img" src="https://stas-melnikov.ru/cliparts/snowboarding2_1200x675.jpg" alt="project"> 
+						<img class="responsive-img" src="//stas-melnikov.ru/cliparts/snowboarding2_1200x675.jpg" alt="project"> 
 					</div>
 					<h2 class="title title_middle ">
 						<a href="#0" target="blank" class="link link_black">Mountain Dew® And TEN Announce Strategic Partnership For The Dew Tour</a>
@@ -169,7 +169,7 @@
 				<div class="section__content">
 					<article class="posts__column article">
 						<div class="article__imgwrap">
-							<img class="responsive-img" src="https://stas-melnikov.ru/cliparts/skills_480x320.jpg" alt="project"> 
+							<img class="responsive-img" src="//stas-melnikov.ru/cliparts/skills_480x320.jpg" alt="project"> 
 						</div>
 						<h3 class="title title_small">
 							<a href="#0" target="blank" class="link link_black">The Basics of Binary and Hex, Explained in Video Form</a>
@@ -187,7 +187,7 @@
 					</article>
 					<article class="posts__column article">
 						<div class="article__imgwrap">
-							<img class="responsive-img" src="https://stas-melnikov.ru/cliparts/phone2_480x320.jpg" alt="project"> 
+							<img class="responsive-img" src="//stas-melnikov.ru/cliparts/phone2_480x320.jpg" alt="project"> 
 						</div>
 						<h3 class="title title_small">
 							<a href="#0" target="blank" class="link link_black">A Simple Software Update Lets Any Smartphone Detect Squeezes and Forceful Touches</a>
@@ -205,7 +205,7 @@
 					</article>
 					<article class="posts__column article">
 						<div class="article__imgwrap">
-							<img class="responsive-img" src="https://stas-melnikov.ru/cliparts/phone_480x320.jpg" alt="project"> 
+							<img class="responsive-img" src="//stas-melnikov.ru/cliparts/phone_480x320.jpg" alt="project"> 
 						</div>
 						<h3 class="title title_small">
 							<a href="#0" target="blank" class="link link_black">Google Maps Driving Mode Is Your Essential In-Car AI</a>
@@ -266,11 +266,7 @@
 			</li>
 		</ul>
 	</div>
-<!-- build:js -->
-<script src="js/main.js"></script>
-<script async src="js/components/menu.js"></script>
-<script async src="js/components/map.js"></script>
-<script async src="js/init.js"></script>
-<!-- endbuild -->
+
+<script async src="js/min/app.min.js"></script>
 </body>
 </html>
